Fix overflow on textarea

--- a/src/sentry/static/sentry/less/group-detail.less
+++ b/src/sentry/static/sentry/less/group-detail.less
@@ -379,7 +379,7 @@
 
   .activity-field {
     .transition(padding .2s ease-in-out);
-    margin: -8px -15px;
+    margin: -10px -10px 0;
 
     textarea, .note-preview {
       display: block;
